Translated java fail to portuguese and made same updates on about and talks